parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lista
Rule 1     lista -> vacio
Rule 2     lista -> lista SALTOLINEA
Rule 3     lista -> lista expresion termino
Rule 4     lista -> lista error termino
Rule 5     asignacion -> VARIABLE = expresion
Rule 6     asignacion -> INDEFINIDA = expresion
Rule 7     expresion -> NUMERO
Rule 8     expresion -> CONSTANTE
Rule 9     expresion -> VARIABLE
Rule 10    expresion -> INDEFINIDA
Rule 11    expresion -> asignacion
Rule 12    expresion -> FUNCION ( expresion )
Rule 13    expresion -> expresion + expresion
Rule 14    expresion -> expresion - expresion
Rule 15    expresion -> expresion * expresion
Rule 16    expresion -> expresion / expresion
Rule 17    expresion -> expresion ^ expresion
Rule 18    expresion -> ( expresion )
Rule 19    expresion -> - expresion
Rule 20    vacio -> <empty>
Rule 21    termino -> vacio
Rule 22    termino -> ;

Terminals, with rules where they appear

(                    : 12 18
)                    : 12 18
*                    : 15
+                    : 13
-                    : 14 19
/                    : 16
;                    : 22
=                    : 5 6
CONSTANTE            : 8
FUNCION              : 12
INDEFINIDA           : 6 10
NUMERO               : 7
SALTOLINEA           : 2
VARIABLE             : 5 9
^                    : 17
error                : 4

Nonterminals, with rules where they appear

asignacion           : 11
expresion            : 3 5 6 12 13 13 14 14 15 15 16 16 17 17 18 19
lista                : 2 3 4 0
termino              : 3 4
vacio                : 1 21

Parsing method: LALR

state 0

    (0) S' -> . lista
    (1) lista -> . vacio
    (2) lista -> . lista SALTOLINEA
    (3) lista -> . lista expresion termino
    (4) lista -> . lista error termino
    (20) vacio -> .

    SALTOLINEA      reduce using rule 20 (vacio -> .)
    error           reduce using rule 20 (vacio -> .)
    NUMERO          reduce using rule 20 (vacio -> .)
    CONSTANTE       reduce using rule 20 (vacio -> .)
    VARIABLE        reduce using rule 20 (vacio -> .)
    INDEFINIDA      reduce using rule 20 (vacio -> .)
    FUNCION         reduce using rule 20 (vacio -> .)
    (               reduce using rule 20 (vacio -> .)
    -               reduce using rule 20 (vacio -> .)
    $end            reduce using rule 20 (vacio -> .)

    lista                          shift and go to state 1
    vacio                          shift and go to state 2

state 1

    (0) S' -> lista .
    (2) lista -> lista . SALTOLINEA
    (3) lista -> lista . expresion termino
    (4) lista -> lista . error termino
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    SALTOLINEA      shift and go to state 3
    error           shift and go to state 5
    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 4
    asignacion                     shift and go to state 10

state 2

    (1) lista -> vacio .

    SALTOLINEA      reduce using rule 1 (lista -> vacio .)
    error           reduce using rule 1 (lista -> vacio .)
    NUMERO          reduce using rule 1 (lista -> vacio .)
    CONSTANTE       reduce using rule 1 (lista -> vacio .)
    VARIABLE        reduce using rule 1 (lista -> vacio .)
    INDEFINIDA      reduce using rule 1 (lista -> vacio .)
    FUNCION         reduce using rule 1 (lista -> vacio .)
    (               reduce using rule 1 (lista -> vacio .)
    -               reduce using rule 1 (lista -> vacio .)
    $end            reduce using rule 1 (lista -> vacio .)


state 3

    (2) lista -> lista SALTOLINEA .

    SALTOLINEA      reduce using rule 2 (lista -> lista SALTOLINEA .)
    error           reduce using rule 2 (lista -> lista SALTOLINEA .)
    NUMERO          reduce using rule 2 (lista -> lista SALTOLINEA .)
    CONSTANTE       reduce using rule 2 (lista -> lista SALTOLINEA .)
    VARIABLE        reduce using rule 2 (lista -> lista SALTOLINEA .)
    INDEFINIDA      reduce using rule 2 (lista -> lista SALTOLINEA .)
    FUNCION         reduce using rule 2 (lista -> lista SALTOLINEA .)
    (               reduce using rule 2 (lista -> lista SALTOLINEA .)
    -               reduce using rule 2 (lista -> lista SALTOLINEA .)
    $end            reduce using rule 2 (lista -> lista SALTOLINEA .)


state 4

    (3) lista -> lista expresion . termino
    (13) expresion -> expresion . + expresion
    (14) expresion -> expresion . - expresion
    (15) expresion -> expresion . * expresion
    (16) expresion -> expresion . / expresion
    (17) expresion -> expresion . ^ expresion
    (21) termino -> . vacio
    (22) termino -> . ;
    (20) vacio -> .

  ! shift/reduce conflict for - resolved as shift
    +               shift and go to state 15
    -               shift and go to state 16
    *               shift and go to state 17
    /               shift and go to state 18
    ^               shift and go to state 19
    ;               shift and go to state 21
    SALTOLINEA      reduce using rule 20 (vacio -> .)
    error           reduce using rule 20 (vacio -> .)
    NUMERO          reduce using rule 20 (vacio -> .)
    CONSTANTE       reduce using rule 20 (vacio -> .)
    VARIABLE        reduce using rule 20 (vacio -> .)
    INDEFINIDA      reduce using rule 20 (vacio -> .)
    FUNCION         reduce using rule 20 (vacio -> .)
    (               reduce using rule 20 (vacio -> .)
    $end            reduce using rule 20 (vacio -> .)

  ! -               [ reduce using rule 20 (vacio -> .) ]

    termino                        shift and go to state 14
    vacio                          shift and go to state 20

state 5

    (4) lista -> lista error . termino
    (21) termino -> . vacio
    (22) termino -> . ;
    (20) vacio -> .

    ;               shift and go to state 21
    SALTOLINEA      reduce using rule 20 (vacio -> .)
    error           reduce using rule 20 (vacio -> .)
    NUMERO          reduce using rule 20 (vacio -> .)
    CONSTANTE       reduce using rule 20 (vacio -> .)
    VARIABLE        reduce using rule 20 (vacio -> .)
    INDEFINIDA      reduce using rule 20 (vacio -> .)
    FUNCION         reduce using rule 20 (vacio -> .)
    (               reduce using rule 20 (vacio -> .)
    -               reduce using rule 20 (vacio -> .)
    $end            reduce using rule 20 (vacio -> .)

    termino                        shift and go to state 22
    vacio                          shift and go to state 20

state 6

    (7) expresion -> NUMERO .

    +               reduce using rule 7 (expresion -> NUMERO .)
    -               reduce using rule 7 (expresion -> NUMERO .)
    *               reduce using rule 7 (expresion -> NUMERO .)
    /               reduce using rule 7 (expresion -> NUMERO .)
    ^               reduce using rule 7 (expresion -> NUMERO .)
    ;               reduce using rule 7 (expresion -> NUMERO .)
    SALTOLINEA      reduce using rule 7 (expresion -> NUMERO .)
    error           reduce using rule 7 (expresion -> NUMERO .)
    NUMERO          reduce using rule 7 (expresion -> NUMERO .)
    CONSTANTE       reduce using rule 7 (expresion -> NUMERO .)
    VARIABLE        reduce using rule 7 (expresion -> NUMERO .)
    INDEFINIDA      reduce using rule 7 (expresion -> NUMERO .)
    FUNCION         reduce using rule 7 (expresion -> NUMERO .)
    (               reduce using rule 7 (expresion -> NUMERO .)
    $end            reduce using rule 7 (expresion -> NUMERO .)
    )               reduce using rule 7 (expresion -> NUMERO .)


state 7

    (8) expresion -> CONSTANTE .

    +               reduce using rule 8 (expresion -> CONSTANTE .)
    -               reduce using rule 8 (expresion -> CONSTANTE .)
    *               reduce using rule 8 (expresion -> CONSTANTE .)
    /               reduce using rule 8 (expresion -> CONSTANTE .)
    ^               reduce using rule 8 (expresion -> CONSTANTE .)
    ;               reduce using rule 8 (expresion -> CONSTANTE .)
    SALTOLINEA      reduce using rule 8 (expresion -> CONSTANTE .)
    error           reduce using rule 8 (expresion -> CONSTANTE .)
    NUMERO          reduce using rule 8 (expresion -> CONSTANTE .)
    CONSTANTE       reduce using rule 8 (expresion -> CONSTANTE .)
    VARIABLE        reduce using rule 8 (expresion -> CONSTANTE .)
    INDEFINIDA      reduce using rule 8 (expresion -> CONSTANTE .)
    FUNCION         reduce using rule 8 (expresion -> CONSTANTE .)
    (               reduce using rule 8 (expresion -> CONSTANTE .)
    $end            reduce using rule 8 (expresion -> CONSTANTE .)
    )               reduce using rule 8 (expresion -> CONSTANTE .)


state 8

    (9) expresion -> VARIABLE .
    (5) asignacion -> VARIABLE . = expresion

    +               reduce using rule 9 (expresion -> VARIABLE .)
    -               reduce using rule 9 (expresion -> VARIABLE .)
    *               reduce using rule 9 (expresion -> VARIABLE .)
    /               reduce using rule 9 (expresion -> VARIABLE .)
    ^               reduce using rule 9 (expresion -> VARIABLE .)
    ;               reduce using rule 9 (expresion -> VARIABLE .)
    SALTOLINEA      reduce using rule 9 (expresion -> VARIABLE .)
    error           reduce using rule 9 (expresion -> VARIABLE .)
    NUMERO          reduce using rule 9 (expresion -> VARIABLE .)
    CONSTANTE       reduce using rule 9 (expresion -> VARIABLE .)
    VARIABLE        reduce using rule 9 (expresion -> VARIABLE .)
    INDEFINIDA      reduce using rule 9 (expresion -> VARIABLE .)
    FUNCION         reduce using rule 9 (expresion -> VARIABLE .)
    (               reduce using rule 9 (expresion -> VARIABLE .)
    $end            reduce using rule 9 (expresion -> VARIABLE .)
    )               reduce using rule 9 (expresion -> VARIABLE .)
    =               shift and go to state 23


state 9

    (10) expresion -> INDEFINIDA .
    (6) asignacion -> INDEFINIDA . = expresion

    +               reduce using rule 10 (expresion -> INDEFINIDA .)
    -               reduce using rule 10 (expresion -> INDEFINIDA .)
    *               reduce using rule 10 (expresion -> INDEFINIDA .)
    /               reduce using rule 10 (expresion -> INDEFINIDA .)
    ^               reduce using rule 10 (expresion -> INDEFINIDA .)
    ;               reduce using rule 10 (expresion -> INDEFINIDA .)
    SALTOLINEA      reduce using rule 10 (expresion -> INDEFINIDA .)
    error           reduce using rule 10 (expresion -> INDEFINIDA .)
    NUMERO          reduce using rule 10 (expresion -> INDEFINIDA .)
    CONSTANTE       reduce using rule 10 (expresion -> INDEFINIDA .)
    VARIABLE        reduce using rule 10 (expresion -> INDEFINIDA .)
    INDEFINIDA      reduce using rule 10 (expresion -> INDEFINIDA .)
    FUNCION         reduce using rule 10 (expresion -> INDEFINIDA .)
    (               reduce using rule 10 (expresion -> INDEFINIDA .)
    $end            reduce using rule 10 (expresion -> INDEFINIDA .)
    )               reduce using rule 10 (expresion -> INDEFINIDA .)
    =               shift and go to state 24


state 10

    (11) expresion -> asignacion .

    +               reduce using rule 11 (expresion -> asignacion .)
    -               reduce using rule 11 (expresion -> asignacion .)
    *               reduce using rule 11 (expresion -> asignacion .)
    /               reduce using rule 11 (expresion -> asignacion .)
    ^               reduce using rule 11 (expresion -> asignacion .)
    ;               reduce using rule 11 (expresion -> asignacion .)
    SALTOLINEA      reduce using rule 11 (expresion -> asignacion .)
    error           reduce using rule 11 (expresion -> asignacion .)
    NUMERO          reduce using rule 11 (expresion -> asignacion .)
    CONSTANTE       reduce using rule 11 (expresion -> asignacion .)
    VARIABLE        reduce using rule 11 (expresion -> asignacion .)
    INDEFINIDA      reduce using rule 11 (expresion -> asignacion .)
    FUNCION         reduce using rule 11 (expresion -> asignacion .)
    (               reduce using rule 11 (expresion -> asignacion .)
    $end            reduce using rule 11 (expresion -> asignacion .)
    )               reduce using rule 11 (expresion -> asignacion .)


state 11

    (12) expresion -> FUNCION . ( expresion )

    (               shift and go to state 25


state 12

    (18) expresion -> ( . expresion )
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 26
    asignacion                     shift and go to state 10

state 13

    (19) expresion -> - . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 27
    asignacion                     shift and go to state 10

state 14

    (3) lista -> lista expresion termino .

    SALTOLINEA      reduce using rule 3 (lista -> lista expresion termino .)
    error           reduce using rule 3 (lista -> lista expresion termino .)
    NUMERO          reduce using rule 3 (lista -> lista expresion termino .)
    CONSTANTE       reduce using rule 3 (lista -> lista expresion termino .)
    VARIABLE        reduce using rule 3 (lista -> lista expresion termino .)
    INDEFINIDA      reduce using rule 3 (lista -> lista expresion termino .)
    FUNCION         reduce using rule 3 (lista -> lista expresion termino .)
    (               reduce using rule 3 (lista -> lista expresion termino .)
    -               reduce using rule 3 (lista -> lista expresion termino .)
    $end            reduce using rule 3 (lista -> lista expresion termino .)


state 15

    (13) expresion -> expresion + . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 28
    asignacion                     shift and go to state 10

state 16

    (14) expresion -> expresion - . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 29
    asignacion                     shift and go to state 10

state 17

    (15) expresion -> expresion * . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 30
    asignacion                     shift and go to state 10

state 18

    (16) expresion -> expresion / . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 31
    asignacion                     shift and go to state 10

state 19

    (17) expresion -> expresion ^ . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 32
    asignacion                     shift and go to state 10

state 20

    (21) termino -> vacio .

    SALTOLINEA      reduce using rule 21 (termino -> vacio .)
    error           reduce using rule 21 (termino -> vacio .)
    NUMERO          reduce using rule 21 (termino -> vacio .)
    CONSTANTE       reduce using rule 21 (termino -> vacio .)
    VARIABLE        reduce using rule 21 (termino -> vacio .)
    INDEFINIDA      reduce using rule 21 (termino -> vacio .)
    FUNCION         reduce using rule 21 (termino -> vacio .)
    (               reduce using rule 21 (termino -> vacio .)
    -               reduce using rule 21 (termino -> vacio .)
    $end            reduce using rule 21 (termino -> vacio .)


state 21

    (22) termino -> ; .

    SALTOLINEA      reduce using rule 22 (termino -> ; .)
    error           reduce using rule 22 (termino -> ; .)
    NUMERO          reduce using rule 22 (termino -> ; .)
    CONSTANTE       reduce using rule 22 (termino -> ; .)
    VARIABLE        reduce using rule 22 (termino -> ; .)
    INDEFINIDA      reduce using rule 22 (termino -> ; .)
    FUNCION         reduce using rule 22 (termino -> ; .)
    (               reduce using rule 22 (termino -> ; .)
    -               reduce using rule 22 (termino -> ; .)
    $end            reduce using rule 22 (termino -> ; .)


state 22

    (4) lista -> lista error termino .

    SALTOLINEA      reduce using rule 4 (lista -> lista error termino .)
    error           reduce using rule 4 (lista -> lista error termino .)
    NUMERO          reduce using rule 4 (lista -> lista error termino .)
    CONSTANTE       reduce using rule 4 (lista -> lista error termino .)
    VARIABLE        reduce using rule 4 (lista -> lista error termino .)
    INDEFINIDA      reduce using rule 4 (lista -> lista error termino .)
    FUNCION         reduce using rule 4 (lista -> lista error termino .)
    (               reduce using rule 4 (lista -> lista error termino .)
    -               reduce using rule 4 (lista -> lista error termino .)
    $end            reduce using rule 4 (lista -> lista error termino .)


state 23

    (5) asignacion -> VARIABLE = . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 33
    asignacion                     shift and go to state 10

state 24

    (6) asignacion -> INDEFINIDA = . expresion
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 34
    asignacion                     shift and go to state 10

state 25

    (12) expresion -> FUNCION ( . expresion )
    (7) expresion -> . NUMERO
    (8) expresion -> . CONSTANTE
    (9) expresion -> . VARIABLE
    (10) expresion -> . INDEFINIDA
    (11) expresion -> . asignacion
    (12) expresion -> . FUNCION ( expresion )
    (13) expresion -> . expresion + expresion
    (14) expresion -> . expresion - expresion
    (15) expresion -> . expresion * expresion
    (16) expresion -> . expresion / expresion
    (17) expresion -> . expresion ^ expresion
    (18) expresion -> . ( expresion )
    (19) expresion -> . - expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion

    NUMERO          shift and go to state 6
    CONSTANTE       shift and go to state 7
    VARIABLE        shift and go to state 8
    INDEFINIDA      shift and go to state 9
    FUNCION         shift and go to state 11
    (               shift and go to state 12
    -               shift and go to state 13

    expresion                      shift and go to state 35
    asignacion                     shift and go to state 10

state 26

    (18) expresion -> ( expresion . )
    (13) expresion -> expresion . + expresion
    (14) expresion -> expresion . - expresion
    (15) expresion -> expresion . * expresion
    (16) expresion -> expresion . / expresion
    (17) expresion -> expresion . ^ expresion

    )               shift and go to state 36
    +               shift and go to state 15
    -               shift and go to state 16
    *               shift and go to state 17
    /               shift and go to state 18
    ^               shift and go to state 19


state 27

    (19) expresion -> - expresion .
    (13) expresion -> expresion . + expresion
    (14) expresion -> expresion . - expresion
    (15) expresion -> expresion . * expresion
    (16) expresion -> expresion . / expresion
    (17) expresion -> expresion . ^ expresion

    +               reduce using rule 19 (expresion -> - expresion .)
    -               reduce using rule 19 (expresion -> - expresion .)
    *               reduce using rule 19 (expresion -> - expresion .)
    /               reduce using rule 19 (expresion -> - expresion .)
    ;               reduce using rule 19 (expresion -> - expresion .)
    SALTOLINEA      reduce using rule 19 (expresion -> - expresion .)
    error           reduce using rule 19 (expresion -> - expresion .)
    NUMERO          reduce using rule 19 (expresion -> - expresion .)
    CONSTANTE       reduce using rule 19 (expresion -> - expresion .)
    VARIABLE        reduce using rule 19 (expresion -> - expresion .)
    INDEFINIDA      reduce using rule 19 (expresion -> - expresion .)
    FUNCION         reduce using rule 19 (expresion -> - expresion .)
    (               reduce using rule 19 (expresion -> - expresion .)
    $end            reduce using rule 19 (expresion -> - expresion .)
    )               reduce using rule 19 (expresion -> - expresion .)
    ^               shift and go to state 19

  ! ^               [ reduce using rule 19 (expresion -> - expresion .) ]
  ! +               [ shift and go to state 15 ]
  ! -               [ shift and go to state 16 ]
  ! *               [ shift and go to state 17 ]
  ! /               [ shift and go to state 18 ]


state 28

    (13) expresion -> expresion + expresion .
    (13) expresion -> expresion . + expresion
    (14) expresion -> expresion . - expresion
    (15) expresion -> expresion . * expresion
    (16) expresion -> expresion . / expresion
    (17) expresion -> expresion . ^ expresion

    +               reduce using rule 13 (expresion -> expresion + expresion .)
    -               reduce using rule 13 (expresion -> expresion + expresion .)
    ;               reduce using rule 13 (expresion -> expresion + expresion .)
    SALTOLINEA      reduce using rule 13 (expresion -> expresion + expresion .)
    error           reduce using rule 13 (expresion -> expresion + expresion .)
    NUMERO          reduce using rule 13 (expresion -> expresion + expresion .)
    CONSTANTE       reduce using rule 13 (expresion -> expresion + expresion .)
    VARIABLE        reduce using rule 13 (expresion -> expresion + expresion .)
    INDEFINIDA      reduce using rule 13 (expresion -> expresion + expresion .)
    FUNCION         reduce using rule 13 (expresion -> expresion + expresion .)
    (               reduce using rule 13 (expresion -> expresion + expresion .)
    $end            reduce using rule 13 (expresion -> expresion + expresion .)
    )               reduce using rule 13 (expresion -> expresion + expresion .)
    *               shift and go to state 17
    /               shift and go to state 18
    ^               shift and go to state 19

  ! *               [ reduce using rule 13 (expresion -> expresion + expresion .) ]
  ! /               [ reduce using rule 13 (expresion -> expresion + expresion .) ]
  ! ^               [ reduce using rule 13 (expresion -> expresion + expresion .) ]
  ! +               [ shift and go to state 15 ]
  ! -               [ shift and go to state 16 ]


state 29

    (14) expresion -> expresion - expresion .
    (13) expresion -> expresion . + expresion
    (14) expresion -> expresion . - expresion
    (15) expresion -> expresion . * expresion
    (16) expresion -> expresion . / expresion
    (17) expresion -> expresion . ^ expresion

    +               reduce using rule 14 (expresion -> expresion - expresion .)
    -               reduce using rule 14 (expresion -> expresion - expresion .)
    ;               reduce using rule 14 (expresion -> expresion - expresion .)
    SALTOLINEA      reduce using rule 14 (expresion -> expresion - expresion .)
    error           reduce using rule 14 (expresion -> expresion - expresion .)
    NUMERO          reduce using rule 14 (expresion -> expresion - expresion .)
    CONSTANTE       reduce using rule 14 (expresion -> expresion - expresion .)
    VARIABLE        reduce using rule 14 (expresion -> expresion - expresion .)
    INDEFINIDA      reduce using rule 14 (expresion -> expresion - expresion .)
    FUNCION         reduce using rule 14 (expresion -> expresion - expresion .)
    (               reduce using rule 14 (expresion -> expresion - expresion .)
    $end            reduce using rule 14 (expresion -> expresion - expresion .)
    )               reduce using rule 14 (expresion -> expresion - expresion .)
    *               shift and go to state 17
    /               shift and go to state 18
    ^               shift and go to state 19
